Test: Add tests for removeStep with String parameter